# blind-vault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  VAULT_TOOL.md  vault
client/: Cargo.toml
client/src/: main.rs
depositor/: Cargo.toml
depositor/src/: main.rs
doc/: vault.md
shared/: Cargo.toml
shared/src/: lib.rs
signer/: Cargo.toml
signer/src/: main.rs
src/: main.rs
wallet/: Cargo.toml  README.md
wallet/src/: main.rs
