[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared"}
musig2 = { git = "https://github.com/halseth/musig2.git", rev = "9ea9e9e", features = ["rand"]}
#musig2 = {path = "../../musig2", features = ["rand"]}
sha2 = "0.10.8"
reqwest = { version = "0.12", features = ["json"] }
bitcoin = { path = "../../rust-bitcoin/bitcoin", features = ["std", "rand-std", "serde", "bitcoinconsensus"] }
#bitcoin = { version = "0.32.5", features = ["std", "rand-std", "serde"] }
secp256k1 = { version = "0.30.0", features = ["rand"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
rand = "0.9.0"
actix-web = "4.10.2"
env_logger = "0.11.7"
