[package]
name = "depositor"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared"}
#bitcoin = { version = "0.32.5", features = ["std", "rand-std", "serde"] }
bitcoin = { path = "../../rust-bitcoin/bitcoin", features = ["std", "rand-std", "serde", "bitcoinconsensus"] }
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4.3"
rand = "0.8.5"
